ChangeLog for Version 3.11.1svn:

2007-06-17   Jonathan Stickles & Chris Johnson
* baseactions.cpp: Fixed Linux flag burning bug.

2007-06-17   Chris Johnson   <grundee@users.sourceforge.net>
* lcsio.cpp: Changed mode for read only to actually be read only.
Changed order of art search paths.

2007-06-18   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* fight.cpp: Fixed a sneaky bug in which having high health doesn't protect you
from damage, it protects your opponent from recieving damage from you. Fighter
archetype characters and people with high health stats are now much more
powerful, because they were actually being weakened by their own health rather
than strengthened by it.

2007-06-18   Chris Johnson   <grundee@users.sourceforge.net>
* src/Makefile.am, f[l]ight.cpp: Renamed flight.cpp to fight.cpp, which it was
supposed to be called. Modified Makefile.am to reflect this change.
* Makefile.am, workspaces/game.cbp: Added workspace for Code::Blocks.

2007-06-19   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
* news.cpp, newstops.cpc: Added art for the Liberal Guardian to be
turned into a major newspaper later.

2007-06-19   Chris Johnson   <grundee@users.sourceforge.net>
* configure.ac, includes.h: Changed version to "3.11.1svn2"
as Jonathan's changes with the art may break compatability with older
versions.


RELEASE VERSION 3.11.1:
Fixed crash when squad is disbanded.
Split up game.cpp into smaller files.
Support for GNU Autotools